<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context="com.bitland.safedrive.ui.RoadInfoActivity">

    <TextView
        android:id="@+id/roadNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="32dp"
        android:text="--"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roadNameTextView"
        android:id="@+id/linearLayout">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/trafficVolumeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_margin"
                android:layout_marginBottom="50dp"
                android:text="@string/traffic_volume_label"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:paddingLeft="@dimen/padding_left"/>

            <TextView
                android:id="@+id/roadBlockLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_margin"
                android:layout_marginBottom="50dp"
                android:text="@string/roadblocks_label"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:paddingLeft="@dimen/padding_left"/>

            <TextView
                android:id="@+id/trafficLightsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_margin"
                android:layout_marginBottom="50dp"
                android:text="@string/robots_label"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:paddingLeft="@dimen/padding_left"/>

            <TextView
                android:id="@+id/carnageLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_margin"
                android:layout_marginBottom="50dp"
                android:text="@string/carnage_label"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:paddingLeft="@dimen/padding_left"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/trafficVolumeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/vertical_margin"
                android:layout_marginBottom="50dp"
                android:text="--"
                android:textColor="@android:color/black"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/roadBlockTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/vertical_margin"
                android:layout_marginBottom="50dp"
                android:text="--"
                android:textColor="@android:color/black"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/trafficLightsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/vertical_margin"
                android:layout_marginBottom="50dp"
                android:text="--"
                android:textColor="@android:color/black"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/carnageTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/vertical_margin"
                android:layout_marginBottom="50dp"
                android:text="--"
                android:textColor="@android:color/black"
                android:textSize="18sp"/>
        </LinearLayout>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
